--- a/page2.html
+++ b/page2.html
@@ -10,6 +10,6 @@
     <audio autoplay> 
     <source src="2W2.mp3" type="audio/mpeg">
     </audio>
-       <iframe width="854" height="480" src="https://www.youtube.com/embed/3KwkSYRx9f4" frameborder="0" allowfullscreen></iframe>
+       <iframe width="854" height="480" src="https://youtu.be/3KwkSYRx9f4?t=180" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
