--- a/page2.html
+++ b/page2.html
@@ -11,6 +11,6 @@
     <source src="2W2.mp3" type="audio/mpeg">
     </audio>
       <iframe style="border: 3px solid #00FF40;" width="560" height="315" src="https://www.youtube.com/embed/y7lXi4lXjZ0?start=180" frameborder="0" allowfullscreen></iframe>
-    <object data="https://soundcloud.com/cameron-gunnin-474114" width="500" height="500"></object>
+    <object data="https://uw.edu" width="500" height="500"></object>
     </body>
 </html>
