--- a/page2.html
+++ b/page2.html
@@ -12,5 +12,8 @@
     </audio>
       <iframe style="border: 3px solid #00FF40;" width="560" height="315" src="https://www.youtube.com/embed/y7lXi4lXjZ0?start=180" frameborder="0" allowfullscreen></iframe>
     <object data="https://uw.edu" width="500" height="500"></object>
+        <video width="320" height="240" controls>
+  <source src="gp.mp4" type="video/mp4">
+            </video>
     </body>
 </html>
