--- a/tags.html
+++ b/tags.html
@@ -22,7 +22,7 @@
             <a href="https://apps.canvas.uw.edu/wayf">UW Canvas</a>
         </ol>
         <ol>
-            <a href="https://accounts.google.com/ServiceLogin?service=mail&passive=true&rm=false&continue=https://mail.google.com/mail/&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1#identifier">Gmail</a>
+            <a href="http://winhost6.ischool.uw.edu/gclass/login.aspx">gclass</a>
         </ol>
         <h2>My Favorite Images</h2>
         <ol>
